[package]
name = "devkimi"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
cfb-mode = "0.8"
chrono = "0.4"
cipher = "0.4"
cron = "0.15"
crypto-common = { version = "0.1", features = ["rand_core"] }
ctr = "0.9"
des = "0.8"
ecb = "*"
flate2 = "1.1"
font-kit = "0.14"
fsb = "0.1"
generic-array = "1.3"
getrandom = "0.3"
hex = "0.4"
hex-literal = "*"
hmac = "0.12"
image = "0.25"
inout = { version = "0.1", features = ["std"] }
jsonpath-rust = "1.0"
jwt = "0.16"
log = "0.4"
markdown = "1.0"
md-5 = "0.10"
md2 = "0.10"
md4 = "0.10"
ofb = "0.6"
open = "5.3"
pem = "3.0"
pkcs1 = "0.7"
pkcs8 = { version = "0.10", features = ["encryption"] }
qrcode = "0.14"
quick-xml = "0.38"
quircs = "0.10"
rand = "0.8"
regex = "1.12"
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
sm2 = { version = "=0.14.0-rc.1", features = ["arithmetic", "pke", "pem"] }
sm3 = "0.4"
sm4 = "0.5"
sqlformat = "0.5.0"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tempfile = "3.23"
thiserror = "2.0"
urlencoding = "2.1"
uuid = { version = "1.18", features = ["v1", "v4", "v7"] }

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
